[package]
name = "astroport-osmo-e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cosmwasm-std = "1"
serde = "1"
osmosis-std = "0.17.0-rc0"
#osmosis-test-tube = "17.0.0-rc0"
osmosis-test-tube = { path = "../../test-tube/packages/osmosis-test-tube" }
test-tube = { path = "../../test-tube/packages/test-tube" }
astroport = { workspace = true }
astroport-on-osmosis = { path = "../packages/astroport_on_osmosis", version = "1" }
serde_json = "1"