[package]
name = "astroport-osmo-e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cosmwasm-std = "1"
serde = "1"
osmosis-std = { workspace = true }
osmosis-test-tube = "20.1.1"
test-tube = "0.2.0"
#osmosis-test-tube = { path = "../../test-tube/packages/osmosis-test-tube" }
#test-tube = { path = "../../test-tube/packages/test-tube" }
#osmosis-test-tube = { git = "https://github.com/epanchee/osmosis-test-tube", branch = "feat/whitelist_cwpool_query" }
#test-tube = { git = "https://github.com/epanchee/osmosis-test-tube", branch = "feat/whitelist_cwpool_query"}
astroport = { workspace = true }
astroport-on-osmosis = { path = "../packages/astroport_on_osmosis", version = "1" }
serde_json = "1"