[package]
name = "astroport-osmo-e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cosmwasm-std = "1"
serde = "1"
osmosis-std = { workspace = true }
osmosis-test-tube = "20.1"
test-tube = "0.2.0"
astroport = { workspace = true }
astroport-on-osmosis = { path = "../packages/astroport_on_osmosis", version = "1" }
serde_json = "1"