[package]
name = "astroport-pcl-osmo"
version = "1.0.3"
authors = ["Astroport"]
edition = "2021"
description = "Astroport passive concentrated pair contract for Osmosis"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
astroport = { workspace = true }
astroport-pcl-common = { workspace = true }
astroport-circular-buffer = { workspace = true }
astroport-on-osmosis = { path = "../../packages/astroport_on_osmosis", version = "1" }
cosmwasm-std = { version = "1", features = ["cosmwasm_1_1"] }
cosmwasm-schema = "1"
cw-storage-plus = "0.15"
cw-utils = "1"
cw2 = "1"
itertools = "0.12"
thiserror = "1"
osmosis-std = { workspace = true }

[dev-dependencies]
cw-multi-test = { version = "0.20.0", features = ["cosmwasm_1_1"] }
anyhow = "1"
derivative = "2"
astroport-native-coin-registry = { workspace = true }
astroport-factory = { package = "astroport-factory-osmosis", path = "../factory" }

# this contract only to check that cw20 is not allowed in this Astroport version
cw20-base = { version = "1", features = ["library"] }
