[package]
name = "astroport-pair-concentrated"
version = "2.3.0"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport concentrated liquidity pair"
license = "MIT"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
astroport = { git = "https://github.com/astroport-fi/hidden_astroport_core", version = "3.7" }
astroport-factory = { path = "../factory", features = [
    "library",
], version = "1" }
astroport-circular-buffer = { git = "https://github.com/astroport-fi/hidden_astroport_core", version = "0.1.0" }
astroport-pcl-common = { git = "https://github.com/astroport-fi/hidden_astroport_core", version = "1.0.1" }
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = "1.0"
cosmwasm-schema = "1.1"
itertools = "0.10"
cw-utils = "0.15"

[dev-dependencies]
astroport-token = "1.1.1"
astroport-factory = { path = "../factory" }
proptest = "1.0"
anyhow = "1.0"
derivative = "2.2"
astroport-native-coin-registry = "1.0.1"
